tests/reference/llvm-expr4-ffedfc3.stderr
syntax error: Statement or Declaration expected inside program, found Expression
 --> tests/expr4.f90:1:1
  |
1 | 5.
  | ^^ 
